# zkprover-circuits

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain  rustfmt.toml
.github/workflows/: rust.yml
eth-types/: Cargo.toml
eth-types/src/: lib.rs  sign_types.rs
keccak256/: Cargo.toml
spec/: world-state-bmpt.md
src/: main.rs
state-service/: Cargo.toml  README.md
tests/: halo2_fibo_test.rs  halo2_poseidon_test.rs  halo2_simple2_test.rs  halo2_simple_test.rs  halo2_test.rs
zkmpt-circuit/: Cargo.toml
zkmpt-circuit/integration-test/: input_rpc.json  pub_input.json  trace.json  world_state.json
zkmpt-circuit/integration-test/src/: main.rs  test.rs
zkmpt-circuit/service/src/: main.rs
zkmpt-circuit/src/: lib.rs  main.rs  manager.rs  operation.rs  serde.rs  state_trie.rs  test_utils.rs  zkProver.rs  zkprover_circuit.rs
zkmpt-circuit/src/ERC4337/: bundler.rs  geth_types.rs  mod.rs  rpc_data_test.json  user_op.rs
zkmpt-circuit/src/gadgets/: account.rs  ecsdsa.rs  gas_ticket.rs  hash_poseidon.rs  hash_util.rs  hashes_sum.rs  kv_util.rs  layer.rs  mod.rs  mpt.rs  padding.rs  poseidon_hash.rs  sign_util.rs  sign_verify.rs  table.rs  table_util.rs
zkmpt-circuit/src/smt_rocksdb_store/: cf_store.rs  default_store.rs  mod.rs  smt_kv.rs  smt_serde.rs
zkmpt-circuit/src/utils/: mod.rs  spec256k1.rs
zkmpt-circuit/src/verifier/: circuit_deploy.rs  halo2_verify.rs  loader.rs  mod.rs
zkmpt/integration-tests/: trace.json
zkmpt/integration-tests/src/: main.rs
zkmpt/src/: eth.rs  lib.rs  mpt_table.rs  operation.rs
