[package]
name = "zkprover-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13"
group = "0.13"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "main" }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2.git", branch = "main" }
# halo2wrong = { git = "https://github.com/scroll-tech/halo2wrong.git", branch = "master" }