[package]
name = "zkprover-circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "zkmpt",
]

[dependencies]
ff = "0.13"
group = "0.13"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "main" }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2.git", branch = "main" }
rand = "0.8.5"
chrono = "0.4.23"
halo2wrong = { git = "https://github.com/scroll-tech/halo2wrong.git", branch = "master" }
rand_core = "0.6.4"

# Developer tooling dependencies
plotters = { version = "0.3.3", optional = false }
tabbycat = { version = "0.1", features = ["attributes"], optional = false }
